--- a/README
+++ b/README
@@ -1,6 +1,8 @@
 Dépot contenant les différents TP/projets réalisés lors de mes études à l'ENSIIE
 
-#### Message aux étudiants de l'ENSIIE:
+------------------------------
+
+### Message aux étudiants de l'ENSIIE:
 Si vous pensez avoir detecter une erreur, ou que votre solution est plus élégante, n'hésitez pas à me le signaler.
 Vous pouvez me contacter:
   - par message privé
